# code3

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml  run.sh  setup_env.sh  setup_sandbox.sh
src/claude_term_ex/: __init__.py  __main__.py  agent.py  config.py  persistence.py
src/claude_term_ex/tools/: __init__.py  bash_exec.py  code_interpreter.py  errors.py  file_ops.py  filesystem.py  git_agent.py  image_analyze.py  mlx_compute.py  registry.py  spotlight.py  web_search.py
src/claude_term_ex/tui/: __init__.py  app.py  widgets.py
tests/: __init__.py
